fixed readability

--- a/index.css
+++ b/index.css
@@ -12,6 +12,11 @@ body {
   background-attachment: fixed;
 }
 
+main {
+  background-color: rgba(255,255,255, .25); 
+  padding: 10px;
+}
+
 .nutrient, .recipes {
   width: 45%;
   vertical-align: top;
